[gd_scene load_steps=9 format=3 uid="uid://cdvls8h7b4v2p"]

[ext_resource type="Script" uid="uid://dpwsouj2eyd02" path="res://scripts/user_interface/credits_screen.gd" id="1_lf1g6"]
[ext_resource type="Theme" uid="uid://d018ofb37nf7u" path="res://assets/resources/themes/default.tres" id="2_836sh"]
[ext_resource type="Texture2D" uid="uid://b0ejunt83wuqv" path="res://assets/game/Stampede.png" id="3_rsjq7"]
[ext_resource type="Texture2D" uid="uid://cxmnwwrltjwj5" path="res://assets/game/social/github.png" id="4_4cb2l"]
[ext_resource type="Texture2D" uid="uid://cv1wuwhbps7yu" path="res://assets/game/social/instagram.png" id="4_kher8"]
[ext_resource type="Texture2D" uid="uid://jopy2aap5hw" path="res://assets/ui/x_icon.png" id="5_82hi4"]
[ext_resource type="Texture2D" uid="uid://dvhjuww0sc1lc" path="res://assets/game/social/itch.png" id="6_3s6s5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gagcj"]

[node name="CreditsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_lf1g6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
color = Color(0.07, 0.0510533, 0.0294, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("2_836sh")
bbcode_enabled = true
text = "[center][color=#a3e9a0][color=#62be5d]Made by 
Stampede Studios[/color]

Abramo
Simone
Gianfelice
Raffaele

[color=#62be5d]Music by[/color]
[url=https://opengameart.org/content/gone-fishin]Memoraphile[/url]"
fit_content = true
scroll_active = false

[node name="TextureRect" type="TextureRect" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_rsjq7")
stretch_mode = 5

[node name="ExtButtons" type="HBoxContainer" parent="ColorRect/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 10
alignment = 1

[node name="GitHubBtn" type="Button" parent="ColorRect/MarginContainer/ExtButtons"]
layout_mode = 2
theme_override_constants/icon_max_width = 128
theme_override_styles/focus = SubResource("StyleBoxEmpty_gagcj")
icon = ExtResource("4_4cb2l")
flat = true

[node name="InstaBtn" type="Button" parent="ColorRect/MarginContainer/ExtButtons"]
layout_mode = 2
theme_override_constants/icon_max_width = 128
theme_override_styles/focus = SubResource("StyleBoxEmpty_gagcj")
icon = ExtResource("4_kher8")
flat = true

[node name="ItchBtn" type="Button" parent="ColorRect/MarginContainer/ExtButtons"]
layout_mode = 2
theme_override_constants/icon_max_width = 128
theme_override_styles/focus = SubResource("StyleBoxEmpty_gagcj")
icon = ExtResource("6_3s6s5")
flat = true

[node name="ExitBtn" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_bottom = 45.0
grow_horizontal = 0
focus_mode = 0
theme_override_colors/icon_hover_color = Color(0.972549, 0.196078, 0.196078, 1)
theme_override_colors/icon_pressed_color = Color(0.972549, 0.196078, 0.196078, 1)
theme_override_colors/icon_normal_color = Color(0.972549, 0.196078, 0.196078, 1)
icon = ExtResource("5_82hi4")
flat = true
icon_alignment = 1

[connection signal="meta_clicked" from="ColorRect/MarginContainer/RichTextLabel" to="." method="_on_rich_text_label_meta_clicked"]
[connection signal="pressed" from="ColorRect/MarginContainer/ExtButtons/GitHubBtn" to="." method="_on_git_hub_btn_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/ExtButtons/InstaBtn" to="." method="_on_insta_btn_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/ExtButtons/ItchBtn" to="." method="_on_itch_btn_pressed"]
[connection signal="pressed" from="ColorRect/ExitBtn" to="." method="_on_exit_btn_pressed"]
